[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/zombie.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Zombie.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 9.28736

[sub_resource type="CircleShape2D" id=2]
radius = 352.343

[sub_resource type="CircleShape2D" id=3]

[node name="Zombie" type="KinematicBody2D"]
pause_mode = 1
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
speed = 100

[node name="zombie" type="Sprite" parent="."]
position = Vector2( 0.927658, -0.786762 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.15749, -0.629963 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
modulate = Color( 1, 0, 0.913725, 1 )
shape = SubResource( 2 )

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
shape = SubResource( 3 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="BulletDetector" to="." method="_on_BulletDetector_body_entered"]
